<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="116dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagem00"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="224dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.602">

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="3dp"
            android:background="@color/teal_200"
            android:onClick="@string/strCadastro"
            android:text="@string/strCadastro"
            android:textColor="@color/verdeescuro"
            android:textColorHighlight="@color/teal_200"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnOsTrantornos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/teal_200"
            android:onClick="clickOsTranstornos"
            android:text="@string/strOsTranstornos"
            android:textColor="@color/verdeescuro"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/teal_200"
            android:onClick="clickSos"
            android:text="@string/strSos"
            android:textColor="@color/verdeescuro"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/teal_200"
            android:onClick="clickDicas"
            android:text="@string/strDicas"
            android:textColor="@color/verdeescuro"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="405dp"
        android:layout_height="76dp"
        android:layout_marginTop="68dp"
        android:text="PsychoDigital"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/teal_200"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>